syntax = "proto3";

package config.v1;

option go_package = "github.com/eggpack/eggpack-terraform-plugin/proto/config/v1;config";

message TerraformPluginConfig {
    string agent_address = 1 [json_name = "agent-address"];
    string config_path = 2 [json_name = "config-path"];
}

message SubscriptionConfig {
    repeated string keys = 1;
}